[project]
name = "hobvysion"
version = "0.1.0"
description = "Random CV stuff"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
]

[tool.ruff]
# See https://beta.ruff.rs/docs/configuration/ for configuration
line-length = 88  # Same as Black
target-version = "py311"  # or "py310", "py39", depending on your Python version

select = [
  "E",  # pycodestyle: style errors
  "F",  # pyflakes: logic errors like unused imports
  "I",  # isort: import sorting
  "B",  # flake8-bugbear: common bugs and bad practices
  "UP", # pyupgrade: keep code modern
  "N",  # pep8-naming: consistent naming
]

# Ignore rules you don’t care about
ignore = [
  "E501"  # Don't enforce line length manually (Black handles this)
]

[tool.ruff.format]
docstring-code-format = true  # Format code blocks in docstrings
